fix: command text on mobile

--- a/src/pages/homepage/styles.css
+++ b/src/pages/homepage/styles.css
@@ -35,7 +35,7 @@ h1 {
     .console {
         color: #f1f1f1;
         display: inline-block;
-        margin-bottom: 50px;
+        margin-bottom: 100px;
     }
         
 }
